@@ -36,10 +36,17 @@ public class ReserveServiceImpl implements ReserveService {
     private final CharityRepository charityRepository;
 
     @Override
-    public SimpleResponse wishReserve(ReserveRequestWish reserveRequest) {
+    public ReserveSimpleResponse wishReserve(ReserveRequestWish reserveRequest) {
         User userInToken = jwtService.getUserInToken();
         Wish wish = wishRepository.findById(reserveRequest.wishId()).orElseThrow(
                 () -> new NotFoundException(String.format("Wish with %s id not found", reserveRequest.wishId())));
+        if (reserveRepository.wishReserved(wish.getId())) {
+            return ReserveSimpleResponse.builder()
+                    .status(HttpStatus.CONFLICT)
+                    .message("Wish with id %s already reserved.".formatted(wish.getId()))
+                    .isReserved(true)
+                    .build();
+        }
         boolean isAnonymous = false;
         if (reserveRequest.isAnonymous()) {
             isAnonymous = true;
@@ -51,7 +58,7 @@ public class ReserveServiceImpl implements ReserveService {
                 .build();
         reserveRepository.save(reserve);
         log.info("Reserving wish with id {}", reserveRequest.wishId());
-        return SimpleResponse
+        return ReserveSimpleResponse
                 .builder()
                 .status(HttpStatus.OK)
                 .message(String.format("Gift with id %s successfully reserved", reserveRequest.wishId()))
@@ -59,10 +66,17 @@ public class ReserveServiceImpl implements ReserveService {
     }
 
     @Override
-    public SimpleResponse charityReserve(ReserveRequestCharity reserveRequestCharity) {
+    public ReserveSimpleResponse charityReserve(ReserveRequestCharity reserveRequestCharity) {
         User user = jwtService.getUserInToken();
         Charity charity = charityRepository.findById(reserveRequestCharity.charityId()).orElseThrow(
-                () -> new NotFoundException(String.format("Charity with %s id not found", reserveRequestCharity.charityId())));
+                () -> new NotFoundException(String.format("Charity with id %s not found", reserveRequestCharity.charityId())));
+        if (reserveRepository.charityReserved(charity.getId())) {
+            return ReserveSimpleResponse.builder()
+                    .status(HttpStatus.CONFLICT)
+                    .message("Charity with id %s already reserved".formatted(charity.getId()))
+                    .isReserved(true)
+                    .build();
+        }
         boolean isAnonymous = false;
         if (reserveRequestCharity.isAnonymous()) {
             isAnonymous = true;
@@ -73,7 +87,7 @@ public class ReserveServiceImpl implements ReserveService {
         reserve.setIsAnonymous(isAnonymous);
         reserveRepository.save(reserve);
         log.info("Reserving charity with id {}", charity.getId());
-        return SimpleResponse
+        return ReserveSimpleResponse
                 .builder()
                 .status(HttpStatus.OK)
                 .message(String.format("Charity with  %s  id successfully reserved", reserveRequestCharity.charityId()))
@@ -92,19 +106,26 @@ public class ReserveServiceImpl implements ReserveService {
     public SimpleResponse addGiftToWish(Long wishId) {
         User userInToken = jwtService.getUserInToken();
         Wish wish = wishRepository.findById(wishId).orElseThrow(
-                () -> new NotFoundException(String.format("Wish with %s id not found", wishId)));
+                () -> new NotFoundException(String.format("Wish with id %s not found", wishId)));
+        if (reserveRepository.wishExistInReserve(userInToken.getId(),wishId)) {
+            return SimpleResponse.builder()
+                    .status(HttpStatus.BAD_REQUEST)
+                    .message("Wish with id %s is not reserved by you".formatted(wish))
+                    .build();
+        }
         Wish newWish = new Wish();
         newWish.setName(wish.getName());
         newWish.setImage(wish.getImage());
         newWish.setDescription(wish.getDescription());
         newWish.setLinkGift(wish.getLinkGift());
+        newWish.setStatus(false);
         newWish.setUser(userInToken);
         wishRepository.save(newWish);
         log.info("Adding gift to wish with id {} ", wishId);
         return SimpleResponse
                 .builder()
                 .status(HttpStatus.OK)
-                .message(String.format("Gift with %s id successfully added to wish from reserves", wishId))
+                .message(String.format("Gift with id %s successfully added to wish from reserves", wishId))
                 .build();
     }
 
@@ -135,7 +156,7 @@ public class ReserveServiceImpl implements ReserveService {
     }
 
     @Override
-    public SimpleResponse deleteWish(Long userId, Long wishId) {
+    public SimpleResponse deleteWish(Long wishId) {
         User user = jwtService.getUserInToken();
         Wish wish = wishRepository.findById(wishId).orElseThrow(
                 () -> new NotFoundException(String.format("Wish with %s not found", wishId)));
@@ -154,7 +175,7 @@ public class ReserveServiceImpl implements ReserveService {
     }
 
     @Override
-    public SimpleResponse deleteCharity(Long userId, Long charityId) {
+    public SimpleResponse deleteCharity(Long charityId) {
         User user = jwtService.getUserInToken();
         Charity charity = charityRepository.findById(charityId).orElseThrow(
                 () -> new NotFoundException(String.format("Charity with %s id not found", charityId)));
